tests/baselines/reference/augmentedTypesClass2.errors.txt
augmentedTypesClass2.ts(16,7): error TS2567: Enum declarations can only merge with namespace or other enum declarations.
augmentedTypesClass2.ts(21,6): error TS2567: Enum declarations can only merge with namespace or other enum declarations.


==== augmentedTypesClass2.ts (2 errors) ====
    // Checking class with other things in type space not value space
    
    // class then interface
    class c11 {
        foo() {
            return 1;
        }
    }
    
    interface c11 {
        bar(): void;
    }
    
    // class then class - covered
    // class then enum 
    class c33 {
          ~~~
!!! error TS2567: Enum declarations can only merge with namespace or other enum declarations.
        foo() {
            return 1;
        }
    }
    enum c33 { One };
         ~~~
!!! error TS2567: Enum declarations can only merge with namespace or other enum declarations.
    
    // class then import
    class c44 {
        foo() {
            return 1;
        }
    }
    
    